# jkiss

./: .gitignore  CMakeLists.txt  README.md
include/jkiss/: jkiss.h  util.h
src/: CMakeLists.txt  jkiss.c  util.c
test/: CMakeLists.txt  test_jkiss.c  test_util.c
